--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "outputDirectory": ".vitepress/dist",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".vitepress/dist"
 }
