fix: simplify vercel config for static site

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "docs/.vitepress/dist",
   "installCommand": "npm install",
-  "framework": "vitepress",
-  "rewrites": [
-    {
-      "source": "/((?!assets/).*)",
-      "destination": "/index.html"
-    }
-  ]
+  "framework": "vitepress"
 }
